--- a/socialjustice.html
+++ b/socialjustice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="project2style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="title">
@@ -14,7 +14,7 @@
 	</div>
 	<div class="box b">
 		<h1> Explore our Website!</h1>
-		<a rel="Home page" type="text/html" href="project2.html"> Home</a>
+		<a rel="Home page" type="text/html" href="index.html"> Home</a>
 		<a rel="campaign page" type="text/html" href="campaignpage.html">campaign page</a>
 		<a rel="Social Justice Page" type="text/html" href="socialjustice.html">Social Justice</a>
 		<a rel="Scientific Data Page" type="text/html" href="scientificdata.html">Scientific Data</a>
